[#239] fix: Wording of buttons and their CSS spacing

--- a/src/assets/styles/_base.styl
+++ b/src/assets/styles/_base.styl
@@ -25,8 +25,6 @@ button
   border-radius: var(--button-border-radius)
   background-color: var(--button-bgc)
   transition: opacity var(--portal-transition-duration)
-  display: flex
-  align-items: center
   cursor: pointer
   transition: background-color var(--portal-transition-duration)
 
